# zkvm-raptor

./: .gitignore  Cargo.toml  README.md
casper-circom/: Cargo.toml
casper-circom-contract-v0/: Cargo.toml
casper-circom-contract-v0/src/: proof.rs
casper-circom/src/: main.rs  proof.rs
miden-raptor/: README.md  contract.wasm
miden-raptor/contract/: Cargo.toml  rust-toolchain
miden-raptor/contract-host/: Cargo.toml  readme.md  rust-toolchain
miden-raptor/contract-host/src/: error.rs  main.rs
miden-raptor/contract/src/: main.rs
miden-raptor/proving-system/: Cargo.toml
miden-raptor/proving-system-wasm/: Cargo.toml
miden-raptor/proving-system-wasm/src/: lib.rs
miden-raptor/proving-system/src/: lib.rs  main.rs
test-circom-host/: Cargo.toml  output.txt
test-circom-host/src/: main.rs  types.rs
