[package]
name = "casper-circom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
casper-contract = { git = "https://github.com/jonas089/casper-node/", branch="circom-verifier", default-features = false, features = ["test-support"]}
casper-types = {git = "https://github.com/jonas089/casper-node/", branch="circom-verifier"}
serde-json-wasm = "1.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"