[package]
name = "test-circom-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Arkworks dependencies
rand = { version = "0.8", default-features = false, features = ["std_rng"]}
ark-crypto-primitives = { version = "= 0.4.0" }
ark-ec = { version= "= 0.4.1", default-features = false }
ark-circom = { git = "https://github.com/jonas089/circom-compat" }
ark-bn254 = "0.4.0"
ark-groth16 = { version = "=0.4.0", default-features = false, features = ["parallel"] }
#rand = { version = "0.8", default-features = false, features = ["std_rng"]}
num-bigint = "0.4.3"
ark-serialize = { version = "0.4", features = ["derive"] }
tempfile = "3.8.1"
serde_json = "1.0.0"
serde = "1.0.0"