[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
casper-contract = { version = "4.0.0", default-features = false, features = ["test-support"]}
casper-types = "4.0.0"
miden-verifier = { version = "=0.7.0", default-features = false }
winter-utils = {verison = "=0.7.0" }

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true